[gd_scene load_steps=6 format=3 uid="uid://2ed8cwy31lfd"]

[ext_resource type="Script" uid="uid://j4wvrmegv5qy" path="res://orbe_emisor.gd" id="1_y1koe"]
[ext_resource type="AudioStream" uid="uid://b8rx4l53b6kop" path="res://Recursos/laserSmall_004.ogg" id="2_yqlsx"]
[ext_resource type="AudioStream" uid="uid://t68u5kdf3ipu" path="res://Recursos/forceField_000.ogg" id="3_yqlsx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m0vqd"]
radius = 977.878

[sub_resource type="CircleShape2D" id="CircleShape2D_yqlsx"]
radius = 50.0

[node name="OrbeEmisor" type="Area2D"]
script = ExtResource("1_y1koe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_m0vqd")

[node name="SonidoCercano" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_yqlsx")
pitch_scale = 0.1
autoplay = true
panning_strength = 20.0
parameters/looping = true

[node name="SonidoLejos" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_yqlsx")
volume_db = -10.777
pitch_scale = 0.3
autoplay = true
panning_strength = 40.0
parameters/looping = true

[node name="AreaAgarrable" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAgarrable"]
shape = SubResource("CircleShape2D_yqlsx")
debug_color = Color(0.977996, 0, 0.399711, 0.42)
